Atualiza número de telefone e e-mail de contato

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
 
         <section id="quem-somos" class="container">
-           <h2>Quem Somos</h2>
+            <h2>Quem Somos</h2>
             <article>
                 <p>A SoftGrow Solutions nasceu em 2018 com um propósito simples: descomplicar a tecnologia para impulsionar o crescimento de pequenas e médias empresas. Criada por um grupo de engenheiros e empreendedores apaixonados por inovação, a SoftGrow desenvolve softwares inteligentes, fáceis de usar e adaptáveis a diferentes setores, do varejo à indústria.</p>
                 <p>Desde o início, acreditamos que a tecnologia só faz sentido se for acessível e gerar impacto real. Por isso, nossos sistemas são pensados para automatizar processos, reduzir custos e transformar dados em decisões estratégicas.</p>
@@ -26,13 +26,13 @@
 
             <div class="mission-values">
                 <article class="card">
-                   <h3>Nossa Missão</h3>
+                    <h3>Nossa Missão</h3>
                     <p>Levar tecnologia de ponta a empresas de todos os tamanhos, transformando desafios em oportunidades com soluções ágeis e confiáveis.</p>
                 </article>
 
                 <article class="card">
-                   <h3>Nossa Visão</h3>
-                   <p>Ser referência nacional em software de gestão para pequenas e médias empresas até 2030, promovendo inovação acessível e crescimento sustentável.</p>
+                    <h3>Nossa Visão</h3>
+                    <p>Ser referência nacional em software de gestão para pequenas e médias empresas até 2030, promovendo inovação acessível e crescimento sustentável.</p>
                 </article>
                 
                 <article class="card">
@@ -71,16 +71,16 @@
             <h2>O que nossos clientes dizem</h2>
             <div class="testimonials">
                 <article class="testimonial">
-                   <blockquote>"Depois que começamos a usar o sistema da SoftGrow, conseguimos reduzir o tempo de atendimento em 40%. A plataforma é intuitiva, o suporte é rápido e sempre que precisamos, eles estão prontos pra ajudar."</blockquote>
-                   <footer>- Ana Beatriz Souza, Gerente de Operações na Clínica VivaMais</footer>
+                    <blockquote>"Depois que começamos a usar o sistema da SoftGrow, conseguimos reduzir o tempo de atendimento em 40%. A plataforma é intuitiva, o suporte é rápido e sempre que precisamos, eles estão prontos pra ajudar."</blockquote>
+                    <footer>- Ana Beatriz Souza, Gerente de Operações na Clínica VivaMais</footer>
                 </article>
                 <article class="testimonial">
                     <blockquote>"Tínhamos muita dificuldade em organizar as finanças da loja. O software nos deu controle total do fluxo de caixa, além de relatórios que ajudaram a tomar decisões mais inteligentes."</blockquote>
-                   <footer>- Rafael Mota, Proprietário da Loja Estilo Urbano</footer>
+                    <footer>- Rafael Mota, Proprietário da Loja Estilo Urbano</footer>
                 </article>
                 <article class="testimonial">
-                   <blockquote>"O que mais me impressionou foi a integração com WhatsApp e redes sociais. Em poucos cliques, conseguimos organizar nosso atendimento e responder os clientes de forma muito mais rápida."</blockquote>
-                   <footer>- Juliana Lima, Marketing da Conecta Delivery</footer>
+                    <blockquote>"O que mais me impressionou foi a integração com WhatsApp e redes sociais. Em poucos cliques, conseguimos organizar nosso atendimento e responder os clientes de forma muito mais rápida."</blockquote>
+                    <footer>- Juliana Lima, Marketing da Conecta Delivery</footer>
                 </article>
             </div>
         </section>
@@ -95,7 +95,7 @@
                 <input type="email" id="email" name="email" placeholder="seuemail@exemplo.com" required>
 
                 <label for="telefone">Telefone:</label>
-                <input type="tel" id="telefone" name="telefone" placeholder="(XX) XXXXX-XXXX" required>
+                <input type="tel" id="telefone" name="telefone" placeholder="(11) 9 8002-8022" required>
 
                 <button type="submit" class="btn-submit">Enviar</button>
             </form>
@@ -112,9 +112,9 @@
             </div>
             <div class="footer-contact">
                 <h3>Informações de Contato</h3>
-                <p>📱 WhatsApp: <a href="tel:+5511988887777">(11) 9 8888-7777</a></p>
-                <p>✉️ E-mail: <a href="mailto:contato@exemplo.com.br">contato@exemplo.com.br</a></p>
-                <p>🌐 <a href="http://www.exemplo.com.br">www.exemplo.com.br</a></p>
+                <p>📱 WhatsApp: <a href="https://wa.me/5511980028022" target="_blank">(11) 9 8002-8022</a></p>
+                <p>✉️ E-mail: <a href="mailto:contato@softgrow.com.br">contato@softgrow.com.br</a></p>
+                <p>🌐 <a href="https://www.softgrow.com.br" target="_blank">www.softgrow.com.br</a></p>
             </div>
         </div>
         <div class="footer-bottom">
